syntax = "proto3";

package auth;

service AuthService {
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse) {}
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool isValid = 1;
}
